# MSTV2

./: .dockerignore  .env.example  CLIENT_CONTEXT.md  Dockerfile  README.md  amvera.yml  celerybeat-schedule-shm  celerybeat-schedule-wal  mstv2.db  nginx.conf  pyproject.toml  pytest.ini  run_bot.py  run_server.py  supervisord.conf
bot/: __init__.py
bot/keyboards/: __init__.py
bot/keyboards/reply/: __init__.py  general.py
bot/routers/: __init__.py  main_keyboard_actions_rt.py  master_rt.py
client/: package-lock.json  package.json
client/src/: App.css  App.tsx  index.css  main.tsx
client/src/api/: client.ts
client/src/hooks/: useWebSocket.ts
client/src/pages/: HomePage.tsx
migrations/: env.py
migrations/versions/: 0557a9025b34_created_service_support_messages_models.py  20a47de2f3f7_add_unique_index_on_enroll_slot.py  22760cb69ede_fixed_accountcreated_1to1_user_and_.py  2a458c7c4854_add_service_chat_and_support_chat_models.py  371fc840134a_add_payment_model.py  4dac59cd1a93_created_account_models_for_payments_and_.py  8b757154d948_added_in_messages_models_sender_id.py  d36c8bf4c127_created_tg_id_for_user_model.py
server/: __init__.py
server/accounts/: __init__.py
server/arbitrage/: __init__.py
server/chats/: __init__.py
server/common/: __init__.py
server/dates/: __init__.py
server/dispute/: __init__.py
server/enrolls/: __init__.py
server/payments/: PAYMENT_P2P_DOCUMENTATION.md  __init__.py
server/scheduletemplates/: __init__.py
server/services/: __init__.py
server/tags/: __init__.py
server/users/: README.md  __init__.py
server/websockets/: README.md  __init__.py  auth.py  connection_manager.py  dispute_chat.py  notfifcations.py  notification_routes.py  routers.py  schemas.py  service_chat.py  support_chat.py
(+233 files in other folders)
