[project]
name = "mstv2"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexgDevs",email = "asmetanin014@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "celery (>=5.6.0,<6.0.0)",
    "redis[asyncio] (>=7.1.0,<8.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "alembic (>=1.17.2,<2.0.0)",
    "fastapi-limiter (>=0.1.6,<0.2.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "aiogram (==3.12.0)",
    "card-validator (>=1.0.0,<2.0.0)",
    "phonenumbers (>=9.0.22,<10.0.0)",
    "python-stdnum (>=2.2,<3.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "yookassa (>=3.9.0,<4.0.0)"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
